

Directory libperl/Asim/lib/Asim/Package
 Svn.pm                    Locally Modified          360 
 Commit.pm                 Locally Modified          360 

Updating with asim-awb changes (rev. 2856 - Carl Beckmann).

- Added an optimization to SVN "tag package" to omit a commit, if just moving
an existing label and there were no changes since the last time the label
was applied.
- For SVN packages, a commit now immediately does a "svn update" to ensure
that the local working copy is really up-to-date with the changes just
committed.

----------
spartha1    Date: Sun Nov 15 18:26:49 EST 2009  CSN: CSN-awb-362
                  Sun Nov 15 23:26:49 UTC 2009


Directory libperl/Asim/lib/Asim/Package
 Svn.pm                    Locally Modified          361 

Updating with asim-awb changes (rev. 2859 - Carl Beckmann).

- fixed which revision number is reported in a warning message about not
moving a tag if there have been no changes since the last tag move.

----------
kfleming    Date: Wed Feb 10 16:21:11 EST 2010  CSN: CSN-awb-363
                  Wed Feb 10 21:21:11 UTC 2010


Directory etc/repositories.d
 ofdm.pack                 Locally Modified          362 

Fixed typo in ofdm pack file

----------
kfleming    Date: Mon Feb 15 09:13:18 EST 2010  CSN: CSN-awb-364
                  Mon Feb 15 14:13:18 UTC 2010


Directory etc/repositories.d
 bsv-libraries.pack        Locally Added               0 
 bluessd.pack              Locally Added               0 

Added awb files for BlueSSD and its dependency bsv-library.  This is so our SNU/UCSD friends can checkout packages more easily.

----------
kfleming    Date: Fri Feb 19 18:17:03 EST 2010  CSN: CSN-awb-365
                  Fri Feb 19 23:17:03 UTC 2010


Directory libperl/Asim/lib/Asim
 Module.pm                 Locally Modified          364 

Added support for generated BA file specification.  Bluespec synthesis boundaries are now supported at arbitrary points in the code.