@@ -18,7 +18,7 @@
 #
 [Global]
 Description=Architects Workbench
-CSN=CSN-awb-365
+CSN=CSN-awb-366
 Name=awb
 Tag=HEAD
 Lock=asim-asimcore
