@@ -6903,3 +6903,15 @@ Directory libperl/Asim/lib/Asim
  Module.pm                 Locally Modified          364 
 
 Added support for generated BA file specification.  Bluespec synthesis boundaries are now supported at arbitrary points in the code.
+
+----------
+spartha1    Date: Fri Feb 19 19:57:39 EST 2010  CSN: CSN-awb-366
+                  Sat Feb 20 00:57:39 UTC 2010
+
+
+Directory libperl/Asim/lib/Asim/Package
+ Branch.pm                 Locally Modified          365 
+
+Updating with asim-awb changes (rev. 2865 - Carl Beckmann)
+
+- fixed a bug in branching SVN packages from a revision older than the HEAD.
